--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,11 @@ body {
 	font-weight: normal;
 	font-style: normal;
 	color: white;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	width: 100%;
+	align-items: center;
 }
 
 a, a:visited {
@@ -25,6 +29,35 @@ a, a:visited {
 
 ul {
 	list-style: none;
+}
+
+a.btn {
+	padding: 8px 16px;
+	font-weight: 700;
+	border: 1px solid white;
+	border-radius: 25px;
+	display: inline-block;
+	box-shadow: 2px 2px 150px 75px rgba(255, 141, 236, 0.1);
+}
+
+a.btn:last-of-type {
+	border: 1px solid transparent;
+	border-radius: 25px;
+	display: inline-block;
+}
+
+.gradient-button {
+	/* font-weight: bold; */
+	background: linear-gradient(45deg, #e226b9, #8a39e7, #d247e4, #a863f7);
+	background-size: 300% 300%;
+	animation: gradientMove 4s infinite linear;
+	outline: none;
+}
+
+@keyframes gradientMove {
+	0% { background-position: 0% 50%; }
+	50% { background-position: 100% 50%; }
+	100% { background-position: 0% 50%; }
 }
 
 canvas {
@@ -41,79 +74,82 @@ main, header, footer {
 }
 
 header {
-	width: 100%;
 	display: flex;
-	justify-content: center;
-	
-	nav {
-		max-width: 1280px;
-		display: flex;
-	}
+	flex-direction: row;
+	align-items: center;
+	width: 100%;
+	/* max-width: 1280px; */
+	max-width: 900px;
+	min-height: 75px;
+	max-height: 75px;
+}
 
-	nav ul {
-		display: flex;
+header nav {
+	/* max-width: 1280px; */
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	/* align-items: flex-end; */
+	align-items: center;
+	width: 100%;
+}
+
+header img {
+	height: 30px;
+	/* width: 35px; */
+}
+
+header nav ul {
+	display: flex;
+	flex-direction: row;
+	li:not(:last-of-type) {
+		margin-right: 15px;
 	}
 }
 
-h2 {
+h2, .hover-info-container h3 {
 	font-size: 46px;
 	font-weight: 700;
 }
 
 main {
 	width: 100%;
+	max-width: 900px;
 	display: flex;
-	justify-content: center;
+	/* justify-content: center; */
+	min-height: 100svh;
 }
 
 section.hero {
-	display: flex;
-	width: 1280px;
-	/* roughly 900px and no X transformation -50, left 0, correct nav width too. */
-	position: relative;
-	height: 100svh;
-}
-
-a.btn {
-	padding: 8px 16px;
-	border: 1px solid white;
-	border-radius: 25px;
-	display: inline-block;
-}
-
-a.btn:last-of-type {
-	padding: 8px 16px;
-	background-color: #8a39e7;
-	border: 1px solid white;
-	border-radius: 25px;
-	display: inline-block;
+	height: 100%;
 }
 
 .hero-container {
-	position: absolute;
-	/* top: 50%; */
-	top: 30%;
-	/* left: 50%; */
-	left: 30%;
-	transform: translate(-50%, -50%);
-	/* height: 100%; */
 	display: flex;
 	flex-direction: column;
+	margin-top: 200px;
+	min-width: 400px;
 }
 
-.hover-info-container {
+.hero-container .cta-text {
+	position: relative;
+}
+
+div.hover-info-container {
 	position: absolute;
-	/* top: 50%; */
-	top: 30%;
-	/* left: 50%; */
-	right: 20%;
-	transform: translateY(-50%);
-	/* height: 100%; */
+	top: 33%;
+	left: 78%;
+	text-align: left;
 	display: flex;
 	flex-direction: column;
+	justify-content: flex-start;
 }
 
-.hero-container > *:not(div) {
+div.hover-info-container h3 {
+
+}
+
+.hero-container > *:not(.btn-container) {
 	margin-bottom: 25px;
 }
 
@@ -135,13 +171,36 @@ a.btn:last-of-type {
 	background-color: rgba(255, 141, 236, 0.1);
 	/* border: 1px solid white; */
 	transition: transform .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 
 	h4 {
 		margin-top: 25px;
+		font-size: 22px;
+		font-weight: 100;
+		letter-spacing: 1px;
+		color: white;
+	}
+
+	p {
+		margin-top: 25px;
+		width: 65%;
+		text-align: left;
+		/* display: none; */
+		color: #c0c0c0;
+	}
+
+	a.btn {
+		margin-top: 25px;
+		box-shadow: none;
+		border: 1px solid white;
+		color: #c0c0c0;
 	}
 
 }
 
 .effects-container div.effect:hover {
 	transform: translateY(-50px);
+	border: 5px solid white;
 }
