--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,9 @@
 /* body flex center */
 
 body { 
-	margin: 0 0;
-	overflow: hidden;
+	margin: 0;
+	/* overflow: hidden; */
+	overflow-x: hidden;
 	font-family: "Urbanist", sans-serif;
 	font-optical-sizing: auto;
 	font-weight: normal;
@@ -20,6 +21,8 @@ body {
 	justify-content: center;
 	width: 100%;
 	align-items: center;
+	/* background-color: #01020e; */
+	background-color: black;
 }
 
 a, a:visited {
@@ -67,6 +70,7 @@ canvas {
 	width: 100%;
 	height: 100%;
 	z-index: -1;
+	display: block;
 }
 
 main, header, footer {
@@ -92,6 +96,8 @@ header nav {
 	/* align-items: flex-end; */
 	align-items: center;
 	width: 100%;
+	font-weight: 500;
+	color: #cecece;
 }
 
 header img {
@@ -116,6 +122,7 @@ main {
 	width: 100%;
 	max-width: 900px;
 	display: flex;
+	flex-direction: column;
 	/* justify-content: center; */
 	min-height: 100svh;
 }
@@ -131,14 +138,19 @@ section.hero {
 	min-width: 400px;
 }
 
-.hero-container .cta-text {
+ .hero-headings {
 	position: relative;
+}
+
+.hero-container p {
+	color: #cecece;
+	line-height: 1.5;
 }
 
 div.hover-info-container {
 	position: absolute;
 	top: 33%;
-	left: 78%;
+	left: 34.5%;
 	text-align: left;
 	display: flex;
 	flex-direction: column;
@@ -153,6 +165,17 @@ div.hover-info-container h3 {
 	margin-bottom: 25px;
 }
 
+/* .effects-container {
+	z-index: 1;
+	position: absolute;
+	top: 65%;
+	left: 0;
+	flex-direction: row;
+	display: flex;
+	width: 100%;
+	height: 50%;
+} */
+
 .effects-container {
 	z-index: 1;
 	position: absolute;
@@ -161,46 +184,81 @@ div.hover-info-container h3 {
 	flex-direction: row;
 	display: flex;
 	width: 100%;
-	height: 100%;
+	height: 50%;
 }
 
 .effects-container div.effect {
 	background-color: transparent;
 	flex-basis: calc(100% / 6);
 	text-align: center;
-	background-color: rgba(255, 141, 236, 0.1);
+	/* background-color: rgba(255, 141, 236, 0.1); */
+	background-color: rgba(255, 141, 236, 0.02);
 	/* border: 1px solid white; */
 	transition: transform .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	border-top: 15px solid rgba(255, 141, 236, 0.02);
+	padding: 0 2%;
 
 	h4 {
 		margin-top: 25px;
 		font-size: 22px;
 		font-weight: 100;
 		letter-spacing: 1px;
-		color: white;
-	}
-
-	p {
-		margin-top: 25px;
-		width: 65%;
-		text-align: left;
-		/* display: none; */
-		color: #c0c0c0;
 	}
 
 	a.btn {
 		margin-top: 25px;
 		box-shadow: none;
-		border: 1px solid white;
-		color: #c0c0c0;
+		border: 2px solid black;
+		color: black;
+		display: none;
+		align-self: flex-start;
 	}
 
 }
 
+.effects-container div.effect ul {
+	margin-top: 25px;
+	align-self: flex-start;
+	display: none;
+	text-align: left;
+	color: rgb(0, 0, 0);
+	font-weight: 500;
+}
+
+.effects-container div.effect ul li:not(:last-of-type) {
+	margin-bottom: 8px;
+}
+
+.effects-container div.effect p {
+	margin-top: 25px;
+	/* width: 65%; */
+	text-align: left;
+	/* display: none; */
+	color: black;
+	display: none;
+	font-weight: 500;
+}
+
+.effects-container div.effect:hover p, .effects-container div.effect:hover a.btn, .effects-container div.effect:hover ul {
+	display: block;
+
+}
+.effects-container div.effect:hover h4 {
+	color: black;
+	font-weight: 900;
+}
+
+
 .effects-container div.effect:hover {
 	transform: translateY(-50px);
-	border: 5px solid white;
+	/* border: 5px solid white; */
+	border-top-left-radius: 25px;
+	border-top-right-radius: 25px;
+}
+
+.services {
+	margin-top: 100%;
 }
