--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,22 @@
 	box-sizing: border-box;
 }
 
+/* *, ::before, ::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+} */
+
 /* main, header - max width 1280px */
 /* body flex center */
+
+::selection {
+	color: #8a39e7;
+	background-color: #fff;
+}
 
 body { 
 	margin: 0;
@@ -23,6 +37,7 @@ body {
 	align-items: center;
 	/* background-color: #01020e; */
 	background-color: black;
+	position: relative;
 }
 
 a, a:visited {
@@ -36,7 +51,7 @@ ul {
 
 a.btn {
 	padding: 8px 16px;
-	font-weight: 700;
+	font-weight: 600;
 	border: 1px solid white;
 	border-radius: 25px;
 	display: inline-block;
@@ -47,6 +62,20 @@ a.btn:last-of-type {
 	border: 1px solid transparent;
 	border-radius: 25px;
 	display: inline-block;
+}
+
+a.btn i {
+	font-size: 12px;
+}
+
+a.btn:hover {
+	cursor: pointer;
+}
+
+a.btn:not(.gradient-button):hover {
+	background-color: white;
+	border: 1px solid white;
+	color: black;
 }
 
 .gradient-button {
@@ -64,13 +93,13 @@ a.btn:last-of-type {
 }
 
 canvas {
-	position: absolute;
+	/* position: absolute; */
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	z-index: -1;
-	display: block;
 }
 
 main, header, footer {
@@ -111,6 +140,11 @@ header nav ul {
 	li:not(:last-of-type) {
 		margin-right: 15px;
 	}
+	li:hover {
+		border-bottom: 1px solid white;
+		cursor: pointer;
+		color: white;
+	}
 }
 
 h2, .hover-info-container h3 {
@@ -138,7 +172,7 @@ section.hero {
 	min-width: 400px;
 }
 
- .hero-headings {
+.hero-headings {
 	position: relative;
 }
 
@@ -179,12 +213,13 @@ div.hover-info-container h3 {
 .effects-container {
 	z-index: 1;
 	position: absolute;
-	top: 65%;
+	/* top: 65%; */
 	left: 0;
 	flex-direction: row;
 	display: flex;
 	width: 100%;
-	height: 50%;
+	height: 25%;
+	margin-top: 100px;
 }
 
 .effects-container div.effect {
@@ -211,10 +246,16 @@ div.hover-info-container h3 {
 	a.btn {
 		margin-top: 25px;
 		box-shadow: none;
-		border: 2px solid black;
+		border: 2px solid white;
 		color: black;
 		display: none;
 		align-self: flex-start;
+		background-color: white;
+		font-weight: 700;
+	}
+
+	a.btn:hover {
+		color: #8a39e7;
 	}
 
 }
@@ -226,6 +267,10 @@ div.hover-info-container h3 {
 	text-align: left;
 	color: rgb(0, 0, 0);
 	font-weight: 500;
+	i {
+		min-width: 25px;
+		/* margin-right: 8px; */
+	}
 }
 
 .effects-container div.effect ul li:not(:last-of-type) {
@@ -255,10 +300,80 @@ div.hover-info-container h3 {
 .effects-container div.effect:hover {
 	transform: translateY(-50px);
 	/* border: 5px solid white; */
-	border-top-left-radius: 25px;
-	border-top-right-radius: 25px;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+	/* border-top: 3px solid rgba(224, 224, 224, 0.377); */
 }
 
 .services {
 	margin-top: 100%;
+	/* display: flex; */
+}
+
+.services p {
+	position: relative;
+	margin-left: 35px;
+	color: #cecece;
+	line-height: 1.5;
+	padding: 25px 25px;
+	span {
+		transform: translateX(-35px);
+		position: absolute;
+		font-size: 30px;
+	}
+}
+
+.services p:hover {
+	background-color: #8a39e7;
+}
+
+.services .services-container {
+	margin-top: 25px;
+	display: flex;
+	/* border: 1px solid white; */
+	border-top: 15px solid rgba(255, 141, 236, 0.1);
+	position: relative;
+
+}
+
+.services .services-left {
+	/* background-color: rgba(255, 141, 236, 0.1); */
+	background-color: rgba(255, 141, 236, 0.02);
+	/* border: 1px solid white; */
+	transition: transform .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	flex-basis: 50%;
+}
+
+.services .services-right {
+	flex-basis: 50%;
+	justify-content: space-between;
+
+	.images {
+		position: relative;
+		margin-left: 100px;
+		margin-top: 25px;
+
+		> div {
+			width: 250px;
+			height: 250px;
+			border: 1px solid rgba(255, 141, 236, 0.1);
+			position: absolute;
+			border-radius: 25px;
+		}
+		div:nth-of-type(1) {
+			top: 0;
+			left: 0;
+		}
+		div:nth-of-type(2) {
+			top: 35px;
+			left: 55px;
+		}
+		div:nth-of-type(3) {
+			top: 70px;
+			left: 110px;
+		}
+	}
 }
