--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,6 @@
 	box-sizing: border-box;
 }
 
-/* *, ::before, ::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit;
-} */
-
-/* main, header - max width 1280px */
-/* body flex center */
-
 ::selection {
 	color: #8a39e7;
 	background-color: #fff;
@@ -23,7 +11,6 @@
 
 body { 
 	margin: 0;
-	/* overflow: hidden; */
 	overflow-x: hidden;
 	font-family: "Urbanist", sans-serif;
 	font-optical-sizing: auto;
@@ -35,7 +22,6 @@ body {
 	justify-content: center;
 	width: 100%;
 	align-items: center;
-	/* background-color: #01020e; */
 	background-color: black;
 	position: relative;
 }
@@ -79,7 +65,6 @@ a.btn:not(.gradient-button):hover {
 }
 
 .gradient-button {
-	/* font-weight: bold; */
 	background: linear-gradient(45deg, #e226b9, #8a39e7, #d247e4, #a863f7);
 	background-size: 300% 300%;
 	animation: gradientMove 4s infinite linear;
@@ -93,7 +78,6 @@ a.btn:not(.gradient-button):hover {
 }
 
 canvas {
-	/* position: absolute; */
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -111,18 +95,15 @@ header {
 	flex-direction: row;
 	align-items: center;
 	width: 100%;
-	/* max-width: 1280px; */
 	max-width: 900px;
 	min-height: 75px;
 	max-height: 75px;
 }
 
 header nav {
-	/* max-width: 1280px; */
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	/* align-items: flex-end; */
 	align-items: center;
 	width: 100%;
 	font-weight: 500;
@@ -131,7 +112,6 @@ header nav {
 
 header img {
 	height: 30px;
-	/* width: 35px; */
 }
 
 header nav ul {
@@ -157,7 +137,6 @@ main {
 	max-width: 900px;
 	display: flex;
 	flex-direction: column;
-	/* justify-content: center; */
 	min-height: 100svh;
 }
 
@@ -199,21 +178,9 @@ div.hover-info-container h3 {
 	margin-bottom: 25px;
 }
 
-/* .effects-container {
-	z-index: 1;
-	position: absolute;
-	top: 65%;
-	left: 0;
-	flex-direction: row;
-	display: flex;
-	width: 100%;
-	height: 50%;
-} */
-
 .effects-container {
 	z-index: 1;
 	position: absolute;
-	/* top: 65%; */
 	left: 0;
 	flex-direction: row;
 	display: flex;
@@ -226,9 +193,7 @@ div.hover-info-container h3 {
 	background-color: transparent;
 	flex-basis: calc(100% / 6);
 	text-align: center;
-	/* background-color: rgba(255, 141, 236, 0.1); */
 	background-color: rgba(255, 141, 236, 0.02);
-	/* border: 1px solid white; */
 	transition: transform .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 	display: flex;
 	flex-direction: column;
@@ -269,7 +234,6 @@ div.hover-info-container h3 {
 	font-weight: 500;
 	i {
 		min-width: 25px;
-		/* margin-right: 8px; */
 	}
 }
 
@@ -279,9 +243,7 @@ div.hover-info-container h3 {
 
 .effects-container div.effect p {
 	margin-top: 25px;
-	/* width: 65%; */
 	text-align: left;
-	/* display: none; */
 	color: black;
 	display: none;
 	font-weight: 500;
@@ -299,15 +261,12 @@ div.hover-info-container h3 {
 
 .effects-container div.effect:hover {
 	transform: translateY(-50px);
-	/* border: 5px solid white; */
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
-	/* border-top: 3px solid rgba(224, 224, 224, 0.377); */
 }
 
 .services {
 	margin-top: 100%;
-	/* display: flex; */
 }
 
 .services p {
@@ -330,20 +289,17 @@ div.hover-info-container h3 {
 .services .services-container {
 	margin-top: 25px;
 	display: flex;
-	/* border: 1px solid white; */
 	border-top: 15px solid rgba(255, 141, 236, 0.1);
 	position: relative;
 
 }
 
 .services .services-left {
-	/* background-color: rgba(255, 141, 236, 0.1); */
 	background-color: rgba(255, 141, 236, 0.02);
-	/* border: 1px solid white; */
 	transition: transform .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: left;
 	flex-basis: 50%;
 }
 
