--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,6 @@
 	box-sizing: border-box;
 }
 
-/* *, ::before, ::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit;
-} */
-
-/* main, header - max width 1280px */
-/* body flex center */
-
 ::selection {
 	color: #8a39e7;
 	background-color: #fff;
@@ -23,7 +11,6 @@
 
 body { 
 	margin: 0;
-	/* overflow: hidden; */
 	overflow-x: hidden;
 	font-family: "Urbanist", sans-serif;
 	font-optical-sizing: auto;
@@ -35,7 +22,6 @@ body {
 	justify-content: center;
 	width: 100%;
 	align-items: center;
-	/* background-color: #01020e; */
 	background-color: black;
 	position: relative;
 }
@@ -79,7 +65,6 @@ a.btn:not(.gradient-button):hover {
 }
 
 .gradient-button {
-	/* font-weight: bold; */
 	background: linear-gradient(45deg, #e226b9, #8a39e7, #d247e4, #a863f7);
 	background-size: 300% 300%;
 	animation: gradientMove 4s infinite linear;
@@ -93,7 +78,6 @@ a.btn:not(.gradient-button):hover {
 }
 
 canvas {
-	/* position: absolute; */
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -111,18 +95,15 @@ header {
 	flex-direction: row;
 	align-items: center;
 	width: 100%;
-	/* max-width: 1280px; */
 	max-width: 900px;
 	min-height: 75px;
 	max-height: 75px;
 }
 
 header nav {
-	/* max-width: 1280px; */
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	/* align-items: flex-end; */
 	align-items: center;
 	width: 100%;
 	font-weight: 500;
@@ -131,7 +112,6 @@ header nav {
 
 header img {
 	height: 30px;
-	/* width: 35px; */
 }
 
 header nav ul {
@@ -157,7 +137,6 @@ main {
 	max-width: 900px;
 	display: flex;
 	flex-direction: column;
-	/* justify-content: center; */
 	min-height: 100svh;
 }
 
@@ -168,7 +147,9 @@ section.hero {
 .hero-container {
 	display: flex;
 	flex-direction: column;
-	margin-top: 200px;
+	/* margin-top: 200px; */
+	margin-top: 20svh;
+	/* margin-top: 20%; */
 	min-width: 400px;
 }
 
@@ -191,44 +172,27 @@ div.hover-info-container {
 	justify-content: flex-start;
 }
 
-div.hover-info-container h3 {
-
-}
-
 .hero-container > *:not(.btn-container) {
 	margin-bottom: 25px;
 }
 
-/* .effects-container {
-	z-index: 1;
-	position: absolute;
-	top: 65%;
-	left: 0;
-	flex-direction: row;
-	display: flex;
-	width: 100%;
-	height: 50%;
-} */
-
 .effects-container {
 	z-index: 1;
 	position: absolute;
-	/* top: 65%; */
 	left: 0;
 	flex-direction: row;
 	display: flex;
 	width: 100%;
-	height: 25%;
-	margin-top: 100px;
+	/* height: 45%; */
+	height: 45svh;
+	margin-top: 10svh;
 }
 
 .effects-container div.effect {
 	background-color: transparent;
 	flex-basis: calc(100% / 6);
 	text-align: center;
-	/* background-color: rgba(255, 141, 236, 0.1); */
 	background-color: rgba(255, 141, 236, 0.02);
-	/* border: 1px solid white; */
 	transition: transform .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 	display: flex;
 	flex-direction: column;
@@ -269,7 +233,6 @@ div.hover-info-container h3 {
 	font-weight: 500;
 	i {
 		min-width: 25px;
-		/* margin-right: 8px; */
 	}
 }
 
@@ -279,9 +242,7 @@ div.hover-info-container h3 {
 
 .effects-container div.effect p {
 	margin-top: 25px;
-	/* width: 65%; */
 	text-align: left;
-	/* display: none; */
 	color: black;
 	display: none;
 	font-weight: 500;
@@ -296,84 +257,40 @@ div.hover-info-container h3 {
 	font-weight: 900;
 }
 
-
 .effects-container div.effect:hover {
 	transform: translateY(-50px);
-	/* border: 5px solid white; */
 	border-top-left-radius: 15px;
+	border-bottom-left-radius: 15px;
 	border-top-right-radius: 15px;
-	/* border-top: 3px solid rgba(224, 224, 224, 0.377); */
+	border-bottom-right-radius: 15px;
+	border-bottom: 5px solid white;
+	/* good idea */
+	/* flex-basis: calc(100% / 2); */
 }
 
-.services {
-	margin-top: 100%;
-	/* display: flex; */
+/* could shrink the rest when one is actice */
+.effects-container:hover div.effect:not(:hover) {
+	/* flex-basis: calc(100% / 8); */
+	/* border: 1px solid red; */
 }
 
-.services p {
-	position: relative;
-	margin-left: 35px;
-	color: #cecece;
-	line-height: 1.5;
-	padding: 25px 25px;
-	span {
-		transform: translateX(-35px);
-		position: absolute;
-		font-size: 30px;
+@media screen and (max-height: 1050px) {
+	.hero-container {
+		margin-top: 10svh;
+	}
+	.effects-container {
+		height: 55svh;
+		margin-top: 8svh;
 	}
 }
 
-.services p:hover {
-	background-color: #8a39e7;
-}
-
-.services .services-container {
-	margin-top: 25px;
-	display: flex;
-	/* border: 1px solid white; */
-	border-top: 15px solid rgba(255, 141, 236, 0.1);
-	position: relative;
-
-}
-
-.services .services-left {
-	/* background-color: rgba(255, 141, 236, 0.1); */
-	background-color: rgba(255, 141, 236, 0.02);
-	/* border: 1px solid white; */
-	transition: transform .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	flex-basis: 50%;
-}
-
-.services .services-right {
-	flex-basis: 50%;
-	justify-content: space-between;
-
-	.images {
-		position: relative;
-		margin-left: 100px;
-		margin-top: 25px;
-
-		> div {
-			width: 250px;
-			height: 250px;
-			border: 1px solid rgba(255, 141, 236, 0.1);
-			position: absolute;
-			border-radius: 25px;
-		}
-		div:nth-of-type(1) {
-			top: 0;
-			left: 0;
-		}
-		div:nth-of-type(2) {
-			top: 35px;
-			left: 55px;
-		}
-		div:nth-of-type(3) {
-			top: 70px;
-			left: 110px;
-		}
+@media screen and (max-width: 1400px) {
+	.effects-container div.effect {
+		padding: 0 2%;
+	}
+	.effects-container div.effect p {
+		font-size: 14px;
 	}
 }
+
+/* fix for 850 macbook air */
